# azure-iot-sdk-c

./: CMakeLists.txt
build_all/linux/: run_tests.sh
provisioning_client/: CMakeLists.txt
